0.2 (2006-02-03):
=================

* Add a --help option, better error messages, and more documentation.

0.1 (2006-02-02):
=================

* Initial release.